Add lightweight fetch status for hot show
